--- a/app/src/main/res/layout/activity_alphabet.xml
+++ b/app/src/main/res/layout/activity_alphabet.xml
@@ -9,12 +9,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.tilen.happyinvestor.AlphabetActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Delnica je vredna 14,12$"
-        android:id="@+id/textView"
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
