--- a/app/src/main/res/layout/activity_facebook.xml
+++ b/app/src/main/res/layout/activity_facebook.xml
@@ -9,12 +9,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.tilen.happyinvestor.FacebookActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Delnica je vredna 17,13$"
-        android:id="@+id/textView3"
+    <ListView
+        android:id="@+id/listView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
 </RelativeLayout>
